--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -2,7 +2,7 @@
 @tailwind components;
 
 .btn {
-  @apply inline-block px-2 py-2 mb-2 font-semibold tracking-wider uppercase rounded-lg;
+  @apply inline-block px-3 py-1 mb-2 font-semibold tracking-wider uppercase rounded-lg;
 }
 
 .btn:focus {
@@ -59,11 +59,15 @@
 
 @screen sm {
   .btn {
-    @apply px-5 py-3;
+    @apply px-5 py-2;
   }
 
   .btn-gray {
     @apply ml-3;
+  }
+
+  .container {
+    @apply p-12;
   }
 }
 
