Redesigned buttons and link

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -2,31 +2,44 @@
 @tailwind components;
 
 .btn {
-  @apply inline-block px-3 py-1 mb-2 font-semibold tracking-wider uppercase rounded-lg;
+  @apply inline-block px-4 py-1 mb-2 font-bold tracking-wider uppercase rounded-lg;
 }
 
 .btn:focus {
   @apply shadow-outline outline-none;
 }
 
-.btn-indigo {
-  @apply text-white bg-indigo-500;
+.btn-blue {
+  @apply text-gray-100 bg-blue-700;
 }
 
-.btn-indigo:hover {
-  @apply bg-indigo-400;
+.btn-blue:hover {
+  @apply bg-blue-800;
 }
 
-.btn-indigo:active {
-  @apply bg-indigo-600;
+.btn-blue:active {
+  @apply bg-blue-900;
+}
+.nav-item {
+  @apply block px-2 py-1 mt-1 text-lg tracking-wide text-gray-900 uppercase rounded;
+}
+
+.nav-item:hover {
+  @apply text-gray-100 bg-blue-800;
+}
+.nav-item:active {
+  @apply text-gray-100 bg-blue-900;
+}
+.nav-item:focus {
+  @apply shadow-outline outline-none;
 }
 
 .btn-gray {
-  @apply ml-2 text-gray-800 bg-gray-400;
+  @apply ml-2 text-gray-700 bg-gray-300;
 }
 
 .btn-gray:hover {
-  @apply bg-gray-300;
+  @apply bg-gray-400;
 }
 
 .btn-gray:active {
