--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -2,7 +2,7 @@
 @tailwind components;
 
 .btn {
-  @apply inline-block px-4 py-1 mb-2 font-bold tracking-wider uppercase rounded-lg;
+  @apply inline-block px-4 py-1 mb-2 font-medium tracking-wider uppercase rounded-lg font-code;
 }
 
 .btn:focus {
@@ -73,8 +73,13 @@
 .container {
   @apply p-4 mx-auto;
 }
-
 @screen sm {
+  .container {
+    @apply py-16;
+  }
+}
+
+@screen md {
   .btn {
     @apply px-5 py-2;
   }
@@ -84,7 +89,7 @@
   }
 
   .container {
-    @apply p-12;
+    @apply p-24;
   }
 }
 
